// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FieldLabel FieldLabel 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Default label
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots FieldLabel with HelpText 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Default label
        </span>
        <p
          class="sc-AxhCb sc-fzokOt itwNrV"
          color="currentColor"
          font-size="16px"
        >
          I am help text. I can be a string or a node that includes a 
          <a
            class="Link-sc-1lpx3d0-0 geMpSb"
            color="blue"
            href="http://nulogy.design"
          >
            link
          </a>
          .
        </p>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots FieldLabel with RequirementText 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Default label
        </span>
        <span
          class="sc-AxhCb gXnznd"
          color="darkGrey"
          font-size="12px"
        >
          (Required)
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots FieldLabel with all additional text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Default label
        </span>
        <span
          class="sc-AxhCb gXnznd"
          color="darkGrey"
          font-size="12px"
        >
          (Required)
        </span>
        <p
          class="sc-AxhCb sc-fzokOt itwNrV"
          color="currentColor"
          font-size="16px"
        >
          I am help text. I can give more details on the input below!
        </p>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots FieldLabel with associated custom input component 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <label
      class="FieldLabel__Label-sc-1t1cp4f-0 knzobv sc-fzqBZW eNQuho"
      color="#011e38"
      style="display:block"
    >
      <div
        class="Box-sc-1qu1edy-0 ilQgHG"
      >
        <span
          style="font-size:14px;font-weight:600;line-height:1.71428571"
        >
          Default label
        </span>
        <span
          class="sc-AxhCb gXnznd"
          color="darkGrey"
          font-size="12px"
        >
          (Required)
        </span>
        <p
          class="sc-AxhCb sc-fzokOt itwNrV"
          color="currentColor"
          font-size="16px"
        >
          I am help text. I can give more details on the input below!
        </p>
      </div>
      <div
        class="Box-sc-1qu1edy-0 sc-fzqNJr cZfPfD"
      >
        <div
          class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
        >
          <div
            class="Box-sc-1qu1edy-0 hxUhcg"
            display="flex"
          >
            <input
              aria-invalid="false"
              aria-required="false"
              class="InputField__StyledInput-sc-6cu4mg-0 soqcT"
              id="input1"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
